fix folder name wrapping

--- a/src/app/core/components/folder-picker/folder-picker.component.scss
+++ b/src/app/core/components/folder-picker/folder-picker.component.scss
@@ -54,6 +54,7 @@ $row-height: 40px;
   flex-grow: 1;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .picker-back {
